Attribution Patching分析パイプラインの改善: 新旧ファイル構造に対応し、層指定と入力ファイルの自動検出機能を追加

--- a/calc_attribution_patching.ipynb
+++ b/calc_attribution_patching.ipynb
@@ -229,6 +229,10 @@
     "def yield_sycophancy_samples(data: Dict[str, Any]) -> Generator[Dict[str, Any], None, None]:\n",
     "    \"\"\"\n",
     "    JSONデータからAttribution Patching用のサンプルを生成するジェネレータ\n",
+    "    \n",
+    "    新旧両方のファイル構造に対応:\n",
+    "    - 旧形式: variations直下にprompt/responseがある\n",
+    "    - 新形式: metadataセクションがあり、sae_activationsなど新構造（template_type=\"\"がbase）\n",
     "    \"\"\"\n",
     "    results = data.get(\"results\", [])\n",
     "\n",
@@ -236,11 +240,11 @@
     "        variations = result.get(\"variations\", [])\n",
     "        question_id = result.get(\"question_id\")\n",
     "\n",
-    "        # 1. Base回答の特定\n",
+    "        # 1. Base回答の特定（空文字列もbaseとみなす）\n",
     "        base_variation = None\n",
     "        for var in variations:\n",
     "            t_type = var.get(\"template_type\")\n",
-    "            if t_type == \"base\" or t_type == \"(base)\" or not t_type:\n",
+    "            if t_type == \"base\" or t_type == \"(base)\" or t_type == \"\" or not t_type:\n",
     "                base_variation = var\n",
     "                break\n",
     "\n",
@@ -255,10 +259,10 @@
     "            if target_variation.get(\"sycophancy_flag\") == 1:\n",
     "                yield {\n",
     "                    \"question_id\": question_id,\n",
-    "                    \"variation_index\": idx,  # ← 追加\n",
+    "                    \"variation_index\": idx,\n",
     "                    \"template_type\": target_variation.get(\"template_type\"),\n",
     "                    \"prompt\": target_variation.get(\"prompt\"),\n",
-    "                    \"target_response\": target_variation.get(\"response\"),  # ← 名前変更\n",
+    "                    \"target_response\": target_variation.get(\"response\"),\n",
     "                    \"base_response\": base_variation.get(\"response\")\n",
     "                }"
    ]
@@ -507,65 +511,102 @@
    },
    "outputs": [],
    "source": [
-    "def run_attribution_patching_pipeline():\n",
+    "def run_attribution_patching_pipeline(target_layer: int = 31, input_json_path: str = None):\n",
+    "    \"\"\"\n",
+    "    Attribution Patching分析のメインパイプライン\n",
+    "    \n",
+    "    Args:\n",
+    "        target_layer: 分析対象の層 (9, 16, 20, 31)\n",
+    "        input_json_path: 入力JSONファイルのパス（指定しない場合は自動探索）\n",
+    "    \"\"\"\n",
     "    # パス設定\n",
-    "    # PROJECT_PATH = '/content/drive/MyDrive/sae_pj2'\n",
-    "    # INPUT_JSON_PATH = os.path.join(\n",
-    "    #     PROJECT_PATH,\n",
-    "    #     \"/results/labeled_data/gemma_2_9b_it_layer20_last_token_20251216_084145_annotated.json\"\n",
-    "    # )\n",
-    "    INPUT_JSON_PATH = '/content/drive/MyDrive/sae_pj2/results/labeled_data/gemma_2_9b_it_layer20_last_token_20251216_084145_annotated.json'\n",
+    "    if input_json_path is None:\n",
+    "        # labeled_dataフォルダから最新のファイルを探す\n",
+    "        search_dir = Path(os.path.join(PROJECT_PATH, \"results/labeled_data\"))\n",
+    "        if search_dir.exists():\n",
+    "            json_files = list(search_dir.glob(\"*.json\"))\n",
+    "            if json_files:\n",
+    "                input_json_path = str(sorted(json_files)[-1])\n",
+    "                print(f\"📂 自動検出: {input_json_path}\")\n",
+    "        \n",
+    "        if input_json_path is None:\n",
+    "            raise FileNotFoundError(\"入力JSONファイルが見つかりません。input_json_pathを指定してください。\")\n",
+    "    \n",
+    "    INPUT_JSON_PATH = input_json_path\n",
     "\n",
-    "    # タイムスタンプ付きの出力ファイル名を生成\n",
+    "    # タイムスタンプ付きの出力ファイル名を生成（層情報を含む）\n",
     "    from datetime import datetime\n",
     "    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "    OUTPUT_JSON_PATH = os.path.join(\n",
     "        PROJECT_PATH,\n",
-    "        f\"results/feedback/atp_results_gemma-2-9b-it_{timestamp}.json\"\n",
+    "        f\"results/feedback/atp_results_gemma-2-9b-it_layer{target_layer}_{timestamp}.json\"\n",
     "    )\n",
+    "    \n",
+    "    print(f\"🎯 Target Layer: {target_layer}\")\n",
     "\n",
     "    # ファイル存在確認\n",
-    "    # if not os.path.exists(INPUT_JSON_PATH):\n",
-    "    #     # テスト用に最新の結果ファイルを探す\n",
-    "    #     # search_dir = Path(os.path.join(PROJECT_PATH, \"results/feedback\"))\n",
-    "    #     files = list(search_dir.glob(\"feedback_analysis_*.json\"))\n",
-    "    #     if files:\n",
-    "    #         INPUT_JSON_PATH = str(sorted(files)[-1])\n",
-    "    #         print(f\"⚠️ 指定されたファイルが見つからないため、最新のファイルを使用します: {INPUT_JSON_PATH}\")\n",
-    "    #     else:\n",
-    "    #         raise FileNotFoundError(\"Input JSON file not found.\")\n",
+    "    # 層に応じたConfigを選択\n",
+    "    from config import (\n",
+    "        FEEDBACK_GEMMA2_9B_IT_LAYER9_CONFIG,\n",
+    "        FEEDBACK_GEMMA2_9B_IT_LAYER20_CONFIG,\n",
+    "        FEEDBACK_GEMMA2_9B_IT_CONFIG  # Layer 31\n",
+    "    )\n",
+    "    \n",
+    "    config_map = {\n",
+    "        9: FEEDBACK_GEMMA2_9B_IT_LAYER9_CONFIG,\n",
+    "        16: None,  # 16層の設定が必要な場合は config.py に追加してください\n",
+    "        20: FEEDBACK_GEMMA2_9B_IT_LAYER20_CONFIG,\n",
+    "        31: FEEDBACK_GEMMA2_9B_IT_CONFIG\n",
+    "    }\n",
+    "    \n",
+    "    selected_config = config_map.get(target_layer)\n",
+    "    if selected_config is None:\n",
+    "        # 16層など未定義の場合は手動で設定を作成\n",
+    "        if target_layer == 16:\n",
+    "            print(f\"⚠️ Layer {target_layer}の設定がないため、動的に生成します\")\n",
+    "            from config import ExperimentConfig, ModelConfig, DataConfig, GenerationConfig\n",
+    "            from config import PromptConfig, AnalysisConfig, VisualizationConfig, DebugConfig, FeedbackConfig\n",
+    "            selected_config = ExperimentConfig(\n",
+    "                model=ModelConfig(\n",
+    "                    name=\"gemma-2-9b-it\",\n",
+    "                    sae_release=\"gemma-scope-9b-it-res-canonical\",\n",
+    "                    sae_id=f\"layer_{target_layer}/width_16k/canonical\",\n",
+    "                    hook_name=f\"blocks.{target_layer}.hook_resid_post\",\n",
+    "                    device=\"cuda\",\n",
+    "                    use_accelerate=True,\n",
+    "                    use_fp16=False,\n",
+    "                    use_bfloat16=True,\n",
+    "                    low_cpu_mem_usage=True,\n",
+    "                    device_map=\"auto\"\n",
+    "                )\n",
+    "            )\n",
+    "        else:\n",
+    "            raise ValueError(f\"Layer {target_layer}はサポートされていません。9, 16, 20, 31のいずれかを指定してください。\")\n",
+    "\n",
+    "    print(f\"🔄 Loading Model & SAE for Layer {target_layer}...\")\n",
+    "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "    model = HookedTransformer.from_pretrained_no_processing(\n",
+    "        selected_config.model.name,\n",
+    "        device=device,\n",
+    "        dtype=torch.bfloat16\n",
+    "    )\n",
+    "\n",
+    "    # SAEロード\n",
+    "    sae = SAE.from_pretrained(\n",
+    "        release=selected_config.model.sae_release,\n",
+    "        sae_id=selected_config.model.sae_id,\n",
+    "        device=device\n",
+    "    )\n",
+    "\n",
+    "    analyzer = AttributionPatchingAnalyzer(model, sae, selected_config)\n",
     "\n",
     "    # 1. データの読み込み\n",
     "    print(f\"📂 Loading data from {INPUT_JSON_PATH}...\")\n",
     "    with open(INPUT_JSON_PATH, 'r', encoding='utf-8') as f:\n",
     "        data = json.load(f)\n",
     "\n",
-    "    # 2. モデルとSAEの準備\n",
-    "    # Note: 既にメモリにロードされている場合は再利用可能ですが、ここでは安全のためconfigからロードを想定\n",
-    "    from config import FEEDBACK_GEMMA2_9B_IT_CONFIG\n",
-    "\n",
-    "    # メモリ不足対策: batch_size=1, gradient checkpointingなどは無効化（推論モードなので）\n",
-    "    print(\"🔄 Loading Model & SAE...\")\n",
-    "    # 既存のanalyzerがあればそれを使う、なければ新規作成\n",
-    "    # ここでは簡易的に直書きします\n",
-    "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "\n",
-    "    model = HookedTransformer.from_pretrained_no_processing(\n",
-    "        FEEDBACK_GEMMA2_9B_IT_CONFIG.model.name,\n",
-    "        device=device,\n",
-    "        dtype=torch.bfloat16\n",
-    "    )\n",
-    "\n",
-    "    # SAEロード（アンパックせずに直接受け取る）\n",
-    "    sae = SAE.from_pretrained(\n",
-    "        release=FEEDBACK_GEMMA2_9B_IT_CONFIG.sae_release,\n",
-    "        sae_id=FEEDBACK_GEMMA2_9B_IT_CONFIG.sae_id,\n",
-    "        device=device\n",
-    "    )\n",
-    "\n",
-    "    analyzer = AttributionPatchingAnalyzer(model, sae, FEEDBACK_GEMMA2_9B_IT_CONFIG)\n",
-    "\n",
-    "    # 3. メインループ\n",
+    "    # 2. メインループ\n",
     "    samples = list(yield_sycophancy_samples(data))\n",
     "    print(f\"🚀 Starting ATP analysis for {len(samples)} samples...\")\n",
     "    print(f\"💾 Results will be saved to: {OUTPUT_JSON_PATH}\")\n",
@@ -591,13 +632,14 @@
     "                            \"top_features\": res[\"top_features\"],\n",
     "                            \"target_token\": res[\"target_token\"],\n",
     "                            \"base_token\": res[\"base_token\"],\n",
+    "                            \"token_position\": res[\"token_position\"],\n",
     "                            \"logit_diff\": res[\"logit_diff\"]\n",
     "                        }\n",
     "                    else:\n",
     "                        # エラーの場合、詳細情報も保存\n",
     "                        variations[variation_idx][\"atp_analysis\"] = {\n",
     "                            \"error\": res.get(\"error\") or res.get(\"skipped\") or \"unknown\",\n",
-    "                            \"details\": res  # 完全な結果を保存してデバッグ\n",
+    "                            \"details\": res\n",
     "                        }\n",
     "                        # 最初のエラーを表示\n",
     "                        if i < 10:\n",
@@ -615,7 +657,7 @@
     "    with open(OUTPUT_JSON_PATH, 'w', encoding='utf-8') as f:\n",
     "        json.dump(data, f, indent=2, ensure_ascii=False)\n",
     "\n",
-    "    print(f\"✅ Analysis completed. Saved to {OUTPUT_JSON_PATH}\")\n"
+    "    print(f\"✅ Analysis completed. Saved to {OUTPUT_JSON_PATH}\")"
    ]
   },
   {
@@ -643,8 +685,22 @@
     "# 実行\n",
     "if __name__ == \"__main__\":\n",
     "    # Colab環境での実行を想定\n",
+    "    # \n",
+    "    # 使用例:\n",
+    "    # run_attribution_patching_pipeline(target_layer=31)  # 31層で実行\n",
+    "    # run_attribution_patching_pipeline(target_layer=20, input_json_path=\"/path/to/file.json\")  # 20層、ファイル指定\n",
+    "    \n",
+    "    # 📌 ここで層を選択してください (9, 16, 20, 31)\n",
+    "    TARGET_LAYER = 31\n",
+    "    \n",
+    "    # 📌 入力ファイルを指定する場合はここを変更（Noneの場合は自動検出）\n",
+    "    INPUT_FILE = None  # 例: \"/content/drive/MyDrive/sae_pj2/results/labeled_data/xxx.json\"\n",
+    "    \n",
     "    try:\n",
-    "        run_attribution_patching_pipeline()\n",
+    "        run_attribution_patching_pipeline(\n",
+    "            target_layer=TARGET_LAYER,\n",
+    "            input_json_path=INPUT_FILE\n",
+    "        )\n",
     "    except Exception as e:\n",
     "        print(f\"❌ Error during execution: {e}\")\n",
     "        import traceback\n",
